fixed account name visibility

--- a/src/app/components/in-app/sidenav/sidenav.component.scss
+++ b/src/app/components/in-app/sidenav/sidenav.component.scss
@@ -26,8 +26,22 @@
   float: right;
 }
 
+.account-item {
+  position: relative;
+}
+
 .account-currency {
   color: #673ab7;
+}
+
+.account-name {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+
+  @media screen and (max-width: 320px) {
+    width: 200px;
+  }
 }
 
 .logo {
@@ -56,7 +70,15 @@
 
 .operations-with-account {
   margin-top: -5px;
-  padding-right: 4px;
+  padding-right: 14px;
+  padding-top: 4px;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+
+  position: absolute;
+  right: 0;
 }
 
 .delete-operation {
